--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==2.4.0
 async-lru==2.0.4
-async-timeout==4.0.3        
+async-timeout==4.0.3
 attrs==23.1.0
 Babel==2.12.1
 backcall==0.2.0
@@ -142,4 +142,5 @@ websocket-client==1.6.3
 Werkzeug==2.2.3
 widgetsnbextension==4.0.9
 wslink==1.12.2
+XlsxWriter==3.1.6
 yarl==1.9.2
